# OpenML-auto-automl

./: .build_images.sh.swp  .gitignore  .gitmodules  .swo  .swp  404.html  README.md  analyze_logs.ipynb  build_containers.py  build_images.sh  docker_explore.py  exploration.ipynb  index.html  local_setup.sh  main.py  mkdocs.yml  multi_run_benchmark.py  objects.inv  pyproject.toml  report_generator.py  requirements.txt  run_report_generator.py  snellius_env_loader.sh  snellius_env_loader_cron.sh  test.html  update_automlb.sh  upload_results.sh  utils.py  visualization.py
Setup/: index.html
Setup/openml_test_server/: index.html
Setup/snellius/: index.html
config/: constraints.yaml
contribution/: index.html
docs/: contribution.md  index.md  limitations.md
docs/Setup/: index.md  openml_test_server.md  snellius.md
limitations/: index.html
search/: search_index.json
src/: metric_info.py  multi_run_benchmark.py  report_generator.py  slurm-9289626.out  slurm-9362189.out  slurm-9362190.out  slurm-9362191.out  slurm-9362192.out  slurm-9362193.out  slurm-9362194.out  slurm-9362195.out  slurm-9362196.out  slurm-9362197.out  slurm-9362198.out  snellius_generate_sbatch.py  snellius_run_sbatch.py  upload_all_result.sh  utils.py
src/config/: constraints.yaml  frameworks.yaml
src/website_assets/templates/: best_result_table.html  complete_page.html  data_information.html  data_report.html  framework_table.html  style.css  toc.html
website_assets/templates/: best_result_table.html  framework_table.html
