[tool.poetry]
name = "openml-auto-automl"
version = "0.1.0"
description = "Automl benchmark for all datasets on openml"
authors = ["SubhadityaMukherjee <msubhaditya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
