[tool.poetry]
name = "openml-auto-automl"
version = "0.1.0"
description = "Automl benchmark for all datasets on openml"
authors = ["SubhadityaMukherjee <msubhaditya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.19,<3.12"
xmltodict = "^0.14.2"
urllib3 = "^2.2.3"
threadpoolctl = "^3.5.0"
six = "^1.17.0"
scipy = "1.10.1"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
